--- a/paper source/egbib.bib
+++ b/paper source/egbib.bib
@@ -1,31 +1,32 @@
-@misc{Authors14,
- author = {Ashish V，Noam S，Niki P},
- title = {Proceedings of the 30th International Conference on Neural Information Processing Systems},
- note = {et al. Attention is all you
-need[C]
-},
- year = 2017
-}
-
-@misc{Authors14b,
- author = {Devlin J，Chang MingWei，Lee K},
- title = {Computational Linguistics：Human Language Technologies.},
- note = {et al. BERT：Pretraining of deep bidirectional transformers for language understanding[C] },
- year = 2019
-}
-
-@article{Alpher02,
-author = {Dorottya Demszky, Dana Movshovitz-Attias, Jeongwoo Ko,Alan Cowen, Gaurav Nemade, Sujith Ravi},
+@article{Ref1,
+author = {Dorottya Demszky and Dana Movshovitz-Attias and Jeongwoo  Ko and Alan Cowen and Gaurav Nemade and Sujith Ravi},
 title = {GoEmotions: A Dataset of Fine-Grained Emotions},
-journal = {Journal of Foo},
+}
+@misc{Ref2,
+ author = {Wenhao Ying and Rong Xiang and Qin Lu},
+ title = {Improving Multi-label Emotion Classification by Integrating both General and Domain Knowledge},
+ 
 }
 
-@article{Alpher03,
-author = {Wenhao Ying, Rong Xiang, Qin Lu},
-title = {Improving Multi-label Emotion Classification by Integrating both General and Domain Knowledge},
-}
-
-@article{Alpher04,
-author = {Lei Zhang, Shuai Wang, Bing Liu},
+@article{Ref3,
+author = {Lei Zhang and Shuai Wang and Bing Liu},
 title = {Deep Learning for Sentiment Analysis: A Survey},
+
+}
+
+@article{Ref4,
+author = {Jacob Devlin and Ming-Wei Chang and Kenton Lee and Kristina Toutanova},
+title = {BERT:Pretraining of deep bidirectional transformers for language understanding},
+year = 2019
+}
+
+@article{Ref5,
+author = {Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Łukasz Kaiser},
+title = {Attention Is All You Need},
+year = 2017
+}
+@article{Ref6,
+author = {Vaibhav Tripathi and Aditya Joshi and Pushpak Bhattacharyya},
+title = {Emotion Analysis from Text: A Survey},
+year = 2016
 }
